polychem/src/atoms/snapshots/polychem__atoms__element__tests__element_average_mass.snap
---
source: polychem/src/atoms/element.rs
description: "Element::new(&DB, \"Po\")"
expression: out
---
  × no natural abundance data could be found for Polonium (Po), though the
  │ following isotopes were found: [209, 210]
  help: consider explicitly selecting the isotope to be used in mass
        calculations — e.g. [209Po]
