polychem/src/atoms/snapshots/polychem__atoms__element__tests__element_monoisotopic_mass.snap
---
source: polychem/src/atoms/element.rs
description: "Element::new(&DB, \"Tc\")?.monoisotopic_mass()"
expression: out
---
  × failed to fetch isotope abundances for monoisotopic mass calculation
  ╰─▶   × no natural abundance data could be found for Technetium (Tc), though
      the
        │ following isotopes were found: [97, 98, 99]
      

