polychem/src/atoms/snapshots/polychem__atoms__element__tests__new_element-2.snap
---
source: polychem/src/atoms/element.rs
description: "Element::new(&DB, \"R\")"
expression: out
---
  × the element "R" could not be found in the supplied atomic database

