polychem/src/atoms/snapshots/polychem__atoms__element__tests__new_isotope-2.snap
---
source: polychem/src/atoms/element.rs
description: "Element::new_isotope(&DB, \"R\", 42)"
expression: out
---
  × the element "R" could not be found in the supplied atomic database
  help: double-check for typos, or add a new entry to the atomic database
