polychem/src/atoms/snapshots/polychem__atoms__element__tests__new_isotope-3.snap
---
source: polychem/src/atoms/element.rs
description: "Element::new_isotope(&DB, \"C\", 15)"
expression: out
---
  × the isotope "C-15" could not be found in the supplied atomic database,
  │ though the following Carbon isotopes were found: [12, 13, 14]
